// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render spec > should in context 1`] = `
<div>
  true
</div>
`;

exports[`render spec > should not in context 1`] = `
<div>
  false
</div>
`;
